[package]
name = "axum-sse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
axum = {version = "0.6.20", features = ["tokio"]}
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
futures-util = "0.3.28"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.14"