[package]
name = "sse-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
reqwest = { version = "0.11.20", features = ["json"] }
reqwest-eventsource = "0.4.0"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
